# rippling-cli

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test.yml
api/: Cargo.toml
api/src/: account_info.rs  break_policy.rs  client.rs  error.rs  lib.rs  pto.rs  public.rs  session.rs  time_entries.rs
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  persistence.rs
cli/src/client/: session.rs
cli/src/commands/: live.rs  manual_entry.rs  mfa.rs  pto.rs
spinner_macro/: Cargo.toml
spinner_macro/src/: lib.rs
src/: client.rs  commands.rs  config.rs  main.rs  persistence.rs
src/client/: account_info.rs  authenticated.rs  break_policy.rs  error.rs  mfa.rs  pto.rs  public.rs  session.rs  time_entries.rs
src/commands/: live.rs  manual_entry.rs  mfa.rs  pto.rs
tests/fixtures/: account_info.json  break_policy.json  holiday_calendar.json  leave_requests.json  time_entries.json
utilities/: Cargo.toml
utilities/fixtures/: active_policy.json  entry_closed.json  time_entry.json
utilities/src/: lib.rs  mocking.rs
