[package]
name = "rippling-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
confy = "0.5.1"
json_value_merge = "1.1.2"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["blocking","json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
spinners = "4.1.0"
time = { version = "0.3.17", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tzdb = "0.5.3"
url = "2.3.1"

[dev-dependencies]
utilities = { path = "utilities" }
