[package]
name = "rippling-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.24.1", features = ["basic-auth", "json"] }
clap = { version = "4.0.32", features = ["derive"] }
confy = "0.5.1"
directories = "5.0.0"
json_value_merge = "1.1.2"
log = "0.4.17"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simplelog = "0.12.1"
spinners = "4.1.0"
time = { version = "0.3.17", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tzdb = "0.5.3"
url = "2.3.1"

[dev-dependencies]
utilities = { path = "utilities" }
