[package]
name = "rippling-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.25.0", features = ["basic-auth", "json"] }
json_value_merge = "1.1.2"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
time = { version = "0.3.17", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
url = "2.3.1"

[dev-dependencies]
utilities = { path = "../utilities" }
