[package]
name = "rippling-cli"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
confy = "0.6.1"
directories = "5.0.1"
env_logger = "0.11.5"
indicatif = "0.17.3"
inquire = "0.7.5"
log = "0.4.17"
regex = "1.10.6"
rippling-api = { path = "../api" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.17", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tzdb = "0.7.2"
url = "2.3.1"

[dev-dependencies]
utilities = { path = "../utilities" }
