[package]
name = "spinner_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.54"
quote = "1.0.26"
regex = "1.10.6"
venial = "0.5.0" # 0.6.0 is breaking
